sample-apps/httpbin/cluster1-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: primary-gateway
  namespace: httpbin
spec:
  selector:
    istio: ingressgateway
  servers:
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  #   tls:
  #     httpsRedirect: true
  #   hosts:
  #   - 'httpbin.kyle.consultsolo.net' 
  - port:
      number: 443
      name: https 
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: httpbin-tls
    hosts:
    - 'httpbin/httpbin.kyle.consultsolo.net'
