sample-apps/httpbin/virtualservice-httpbin.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-istio-route
  namespace: httpbin
spec:
  gateways:
  - primary-gateway
  hosts:
  - httpbin/httpbin.kyle.consultsolo.net
  # http:
  # - match:
  #   - uri:
  #       prefix: /
  #   name: httpbin-route
  #   route:
  #   - destination:
  #       host: httpbin.httpbin.svc.cluster.local
  #       port:
  #         number: 8000
  tls:
  - match:
    - port: 443
      sniHosts:
        - "httpbin.kyle.consultsolo.net"
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 8000
